# MireaHackAudio

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  connect.py  dependencies.py  main.py  models.py  project_settings.py  tasks.py
backend/ml/: __init__.py  restavration.py  tagging.py  transcription.py
backend/routers/: auth.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/svg/: cross.vue  filter.vue  miniMusicPlayer.vue  music.vue  musicPlayer.vue  play.vue  search.vue  skrepka.vue  strelka.vue  strelka2.vue
frontend/src/components/: Filter.vue  Footer.vue  Header.vue  LoadMusic.vue  MusicInfo.vue  MusicList.vue  MusicLoad.vue  MusicText.vue
frontend/src/components/Lists/: AuthorList.vue  PerformersList.vue
frontend/src/router/: index.js
frontend/src/stores/: store.js
frontend/src/views/: EditMusic.vue  Home.vue  LoadMusicPage.vue  PlayMusic.vue  RebuildMusic.vue
frontend/test-setup/: LoadMusic.test.js  MusicList.test.js  MusicText.test.js  Test.js  mock.js
ml/: ml_requirements.txt  restavration.py  tagging.py  transcription.py
