[project]
name = "mirea-hack-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.3.0",
    "celery>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "opensearch-py>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.12.1",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
]
